perf: fetch game data async, more logging

--- a/src/ui/hsr_scanner.ui
+++ b/src/ui/hsr_scanner.ui
@@ -113,6 +113,9 @@
       </layout>
      </widget>
      <widget class="QPushButton" name="pushButtonStartScan">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>10</x>
